# r2template

./: .gitignore  Cargo.toml  README.md  build.rs
author.test/: mod.json
author.test/keyvalues/scripts/weapons/: mp_gun.txt
author.test/mod/scripts/vscripts/: client.nut  server.nut
src/: lib.rs  main.rs
src/lib/: info.rs  lib.rs  mod.rs  new.rs  pack.rs
templates/: info.json  templates.json
templates/mod/scripts/levels/: mp_map.rson
templates/mod/scripts/vscripts/: cl_mp_map.nut  sh_mp_map.gnut  shared.nut
templates/mod/scripts/vscripts/lobby/: sh_private_lobby_mp_map.gnut
templates/vpk/: rename_vpk.py
