[package]
name = "r2template"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
process_path = "0.1.4"
serde = "1.0.147"
serde_json = "1.0.87"
serde_derive = "1.0.147"
zip = "0.6.3"
walkdir = "2.3.2"

[build-dependencies]
home = "0.5.4"
walkdir = "2.3.2"

[features]
default = []
cargo_templates = []